@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Add Generic event type
+
 1.302023  2016-06-02 08:09:54-07:00 America/Los_Angeles (TRIAL RELEASE)
 
     - Do not fail if Test2::API::Breakage cannot load (rare 5.10.0 issue)
